--- a/data/themes/mytheme.toml
+++ b/data/themes/mytheme.toml
@@ -8,11 +8,11 @@ light = true
 primary = "#2962ff"
 
 # Menu
-menu_primary = "#F9FFD7"
+menu_primary = "#D7F9FF"
 menu_text = "#34495e"
 menu_text_active = "#2962ff"
 menu_title = "#2b2b2b"
 
 # Home sections
 home_section_odd = "rgb(215, 249, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_even = "rgb(249, 255, 215)"
