--- a/data/themes/mytheme.toml
+++ b/data/themes/mytheme.toml
@@ -8,7 +8,7 @@ light = true
 primary = "#2962ff"
 
 # Menu
-menu_primary = "#D7F9FF"
+menu_primary = "#5EE7FF"
 menu_text = "#34495e"
 menu_text_active = "#2962ff"
 menu_title = "#2b2b2b"
