--- a/data/themes/mytheme.toml
+++ b/data/themes/mytheme.toml
@@ -5,12 +5,12 @@ name = "Minimal"
 light = true
 
 # Primary
-primary = "#2962ff"
+primary = "#FFC300"
 
 # Menu
 menu_primary = "#C1D7D9"
 menu_text = "#34495e"
-menu_text_active = "#2962ff"
+menu_text_active = "#C70039"
 menu_title = "#2b2b2b"
 
 # Home sections
