--- a/data/themes/mytheme.toml
+++ b/data/themes/mytheme.toml
@@ -10,7 +10,7 @@ primary = "#979899"
 # Menu
 menu_primary = "#C1D7D9"
 menu_text = "#34495e"
-menu_text_active = "#080884"
+menu_text_active = "#2b2b2b"
 menu_title = "#2b2b2b"
 
 # Home sections
