--- a/data/themes/mytheme.toml
+++ b/data/themes/mytheme.toml
@@ -5,14 +5,14 @@ name = "mytheme"
 light = true
 
 # Primary
-primary = "#073D6C"
+primary = "#015263"
 
 # Menu
-menu_primary = "#F2F9FF"
+menu_primary = "#EFFCFF"
 menu_text = "#34495e"
-menu_text_active = "#073D6C"
+menu_text_active = "#015263"
 menu_title = "#2b2b2b"
 
 # Home sections
-home_section_odd = "rgb(236, 246, 255)"
-home_section_even = "rgb(236, 246, 255)"
+home_section_odd = "rgb(234, 251, 254)"
+home_section_even = "rgb(234, 251, 254)"
