--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -15,12 +15,12 @@
 
 [[main]]
   name = "Projects"
-  url = "#projects"
+  url = "projects"
   weight = 30
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "featured"
   weight = 40
 
 [[main]]
