--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,10 +13,10 @@
 #  url = "#posts"
 #  weight = 20
 
-[[main]]
-  name = "Projects"
-  url = "projects"
-  weight = 30
+#[[main]]
+#  name = "Projects"
+#  url = "projects"
+#  weight = 30
 
 [[main]]
   name = "Publications"
@@ -27,6 +27,11 @@
   name = "Teaching"
   url = "teaching"
   weight = 50
+
+[[main]]
+  name = "Research"
+  url = "research"
+  weight = 20
 
 #[[main]]
 #  name = "Contact"
